# TopoEKF

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: anomaly_config.yaml  detector_config.yaml  ekf_config.yaml  tda_config.yaml
data/: README.md
docs/: GITHUB_RELEASE_PLAN.md  METHODOLOGY.md
scripts/: download_model.py  run_anomaly_only.py  run_tracking.py
src/topoekf/: __init__.py
src/topoekf/anomaly/: __init__.py  anomaly_result.py  interfaces.py  isolation_forest.py
src/topoekf/detection/: __init__.py  detection_result.py  interfaces.py  yolo_detector.py
src/topoekf/pipeline/: __init__.py  anomaly_pipeline.py  topoekf_pipeline.py
src/topoekf/topology/: __init__.py  feature_builder.py  interfaces.py  persistence.py  persistence_image.py  statistical_features.py
src/topoekf/tracking/: __init__.py  ekf_core.py  interfaces.py  state.py  track.py  track_manager.py
src/topoekf/tracking/association/: __init__.py  hungarian.py  mahalanobis.py
src/topoekf/tracking/noise_adapters/: __init__.py  base_adapter.py  tier1_confidence.py  tier2_occlusion.py  (+1 more)
src/topoekf/visualization/: __init__.py  anomaly_visualizer.py  tda_visualizer.py  track_visualizer.py
tests/fixtures/: sample_detections.json
tests/integration/: test_full_pipeline.py  test_tda_ekf_feedback.py
tests/unit/: test_association.py  test_ekf_core.py  test_isolation_forest.py  test_noise_adapters.py  test_run_tracking_script.py  test_topology_features.py  test_track_manager.py  test_track_visualizer.py  test_yolo_detector.py
